salesforce/force-app/main/default/objects/ForensicFinding__c/ForensicFinding__c.object-meta.xml
<CustomObject>
    <description>One row per leak record. The heart of the data model.</description>
    <label>Forensic Finding</label>
    <nameField>
        <displayFormat>FF-{00000}</displayFormat>
        <label>Forensic Finding ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forensic Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>