salesforce/force-app/main/default/objects/ForensicFinding__c/fields/ConsultantNote__c.field-meta.xml
<CustomField>
    <fullName>ConsultantNote__c</fullName>
    <label>Consultant Note</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>