salesforce/force-app/main/default/objects/ForensicFinding__c/fields/ConsultantNoteUpdatedAt__c.field-meta.xml
<CustomField>
    <fullName>ConsultantNoteUpdatedAt__c</fullName>
    <label>Consultant Note Updated At</label>
    <type>DateTime</type>
</CustomField>