salesforce/force-app/main/default/objects/ForensicFinding__c/fields/DetectedAt__c.field-meta.xml
<CustomField>
    <fullName>DetectedAt__c</fullName>
    <label>Detected At</label>
    <type>DateTime</type>
</CustomField>