salesforce/force-app/main/default/objects/ForensicFinding__c/fields/DetectorId__c.field-meta.xml
<CustomField>
    <fullName>DetectorId__c</fullName>
    <label>Detector Id</label>
    <type>Text</type>
    <length>32</length>
    <required>true</required>
</CustomField>