salesforce/force-app/main/default/objects/ForensicFinding__c/fields/EntitledUsd__c.field-meta.xml
<CustomField>
    <fullName>EntitledUsd__c</fullName>
    <label>Entitled USD</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>