salesforce/force-app/main/default/objects/ForensicFinding__c/fields/ForensicScan__c.field-meta.xml
<CustomField>
    <fullName>ForensicScan__c</fullName>
    <label>Forensic Scan</label>
    <type>Lookup</type>
    <referenceTo>ForensicScan__c</referenceTo>
    <relationshipName>Findings</relationshipName>
    <relationshipLabel>Findings</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>