salesforce/force-app/main/default/objects/ForensicFinding__c/fields/GapUsd__c.field-meta.xml
<CustomField>
    <fullName>GapUsd__c</fullName>
    <label>Gap USD</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>