salesforce/force-app/main/default/objects/ForensicFinding__c/fields/HiddenAt__c.field-meta.xml
<CustomField>
    <fullName>HiddenAt__c</fullName>
    <label>Hidden At</label>
    <type>DateTime</type>
</CustomField>