salesforce/force-app/main/default/objects/ForensicFinding__c/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <label>Metadata (JSON)</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>