salesforce/force-app/main/default/objects/ForensicFinding__c/fields/PrimaryRecordId__c.field-meta.xml
<CustomField>
    <fullName>PrimaryRecordId__c</fullName>
    <label>Primary Record Id</label>
    <type>Text</type>
    <length>18</length>
    <externalId>true</externalId>
</CustomField>