salesforce/force-app/main/default/objects/ForensicFinding__c/fields/PrimaryRecordType__c.field-meta.xml
<CustomField>
    <fullName>PrimaryRecordType__c</fullName>
    <label>Primary Record Type</label>
    <type>Text</type>
    <length>80</length>
</CustomField>