salesforce/force-app/main/default/objects/ForensicFinding__c/fields/RealizedUsd__c.field-meta.xml
<CustomField>
    <fullName>RealizedUsd__c</fullName>
    <label>Realized USD</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>