salesforce/force-app/main/default/objects/ForensicFinding__c/fields/RecoverabilityScore__c.field-meta.xml
<CustomField>
    <fullName>RecoverabilityScore__c</fullName>
    <label>Recoverability Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>