salesforce/force-app/main/default/objects/ForensicFinding__c/fields/RemediationRecipe__c.field-meta.xml
<CustomField>
    <fullName>RemediationRecipe__c</fullName>
    <label>Remediation Recipe</label>
    <description>Phase 16b — rendered remediation recipe with finding metadata interpolated. Written at scan time by RemediationRecipeService; consumed by issueDetailPage and the executive PDF.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>