salesforce/force-app/main/default/objects/ForensicFinding__c/fields/SourceRecordRefs__c.field-meta.xml
<CustomField>
    <fullName>SourceRecordRefs__c</fullName>
    <label>Source Record Refs (JSON)</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>