salesforce/force-app/main/default/objects/ForensicFinding__c/fields/UserNotes__c.field-meta.xml
<CustomField>
    <fullName>UserNotes__c</fullName>
    <label>User Notes</label>
    <description>Consultant-authored notes about this finding. Surfaced at the top of the Finding Detail page and persisted across visits so context survives consultant handoffs.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>